--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -9,7 +9,7 @@
 }
 
 .search-box::before {
-  content: 'search';
+  content: "\e8b6";
   font-family: 'Material Symbols Outlined';
   position: absolute;
   left: 1rem;
